# django_gis

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  assignment_backend.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  robots.txt
apps/api/city_map/: __init__.py  admin.py  apps.py  filters.py  models.py  urls.py
apps/api/city_map/migrations/: 0001_initial.py  0002_alter_building_options.py  0003_alter_building_geom.py
apps/api/city_map/tests/: __init__.py  area_filters_test.py  distance_filters_test.py
apps/api/city_map/v1/: routers.py  serializers.py  views.py
apps/core/api/: urls.py
apps/core/api/v1/: urls.py
apps/core/main/: urls.py
apps/core/utils/: admin.py  gis.py  parsers.py  renderers.py  serializers.py
config/: urls.py
config/settings/base/: apps.py  environment.py  middlewares.py
config/settings/components/: __init__.py  paths.py  rest_framework.py
config/settings/environments/: common.py  development.py  production.py
private/: .gitignore
